# tracelify

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: api.md  python.md  security.md
.claude/skills/plan/: SKILL.md
.claude/skills/rag-check/: SKILL.md
.claude/skills/review/: SKILL.md
apps/api/: pyproject.toml
apps/api/src/tracelify/: __init__.py  app.py  config.py  errors.py  ingest.py  middleware.py
apps/api/src/tracelify/routers/: __init__.py  health.py
apps/api/tests/: __init__.py  conftest.py  test_errors.py  test_health.py  test_request_id.py
docs/adr/: 0001-tech-stack.md
docs/architecture/: api-conventions.md  overview.md
docs/product/: requirements.md  vision.md
src/tracelify/: config.py
