[project]
name = "tracelify"
version = "0.1.0"
description = "Open-source RAG knowledge vault with chat"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "python-multipart>=0.0.9",  # For file uploads
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",  # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracelify"]
